processed/jira/txt/LU/LU-18190.txt
Key:        LU-18190
Summary:    Kernel v6.11 support
Link:       https://jira.whamcloud.com/browse/LU-18190
Type:       Improvement
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Sun, 1 Sep 2024 03:11:21 +0000
Updated:    Fri, 6 Dec 2024 15:37:19 +0000
Resolved:   Sun, 24 Nov 2024 15:05:17 +0000

--- Description ---
Linux commit v6.10-12269-g78eb4ea25cd5

  sysctl: treewide: constify the ctl_table argument of proc_handlers

Linux commit v5.15-rc3-13-g9257e1567738

  mm/filemap: Add folio_index(), folio_file_page() and

  folio_contains()

Linux commit v6.10-rc6-27-g05b0c7edad9b

  mm: drop page_index and simplify folio_index

Removed page_index() in favor of folio_index() provide a wrapper

folio_index_page() to call the correct function with a page.

Linux commit v6.1-rc4-186-gcb67f4282bf9

  mm,thp,rmap: simplify compound page mapcount handling

Adds folio_mapcount()

Linux commit v6.10-rc6-100-gcdd9a571b7d8

  fs/proc: move page_mapcount() to fs/proc/internal.h

Removed page_mapcount() in favor of folio_mapcount() provide

folio_mapcount_page() to call page_mapcount() or calculate

mapcount as done by folio_precise_page_mapcount()

--- Comment (pjones, Sun, 24 Nov 2024 15:05:17 +0000) ---
Merged for 2.17

--- Comment (gerrit, Sun, 24 Nov 2024 06:05:41 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/56283/

Subject: LU-18190 build: compatibility updates for kernel 6.11

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 68ec6a2b6fca5dcdd02b871b95b1c763b63b6272

--- Comment (yujian, Tue, 17 Sep 2024 21:36:20 +0000) ---
Hi stancheff,

With either of the above two patches applied on the latest master branch, while building the codes with gcc-14 against kernel 6.11.0-061100-generic on Ubuntu 24.04, I hit the following error:

obd.c: In function ‘jt_pool_cmd’:
obd.c:5093:9: error: ‘__builtin___strncpy_chk’ output truncated before terminating nul copying as many bytes from a string as its length [-Werror=stringop-truncation]
 5093 |         strncpy(fsname, param, fsname_len);
      |         ^
In function ‘parse_pool_cmd_args’,
    inlined from ‘jt_pool_cmd’ at obd.c:5216:7:
obd.c:5080:30: note: length computed here
 5080 |                 fsname_len = strlen(param);
      |                              ^~~~~~~~~~~~~
cc1: all warnings being treated as errors

The above error is the only one that is causing build failure. Could you please incorporate the fix of the above error into your patch so that we do not need another patch to support kernel 6.11?

--- Comment (gerrit, Tue, 17 Sep 2024 14:13:55 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/56387

Subject: LU-18190 build: compatibility updates for kernel 6.11

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: bc7b06d7b9c394fe4d5db358cc25cba5db018b7e

--- Comment (gerrit, Fri, 6 Sep 2024 16:58:07 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/56283

Subject: LU-18190 build: compatibility updates for kernel 6.11

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: eb4b9e2dc268001cb90aa55e904347105de7bbd9
